--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
+    "@testing-library/react": "^14.0.0",
+    "happy-dom": "^8.9.0",
     "path-to-regexp": "6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -18,7 +21,8 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "standard": "^17.0.0",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "vitest": "^0.29.2"
   },
   "eslintConfig": {
     "extends": [
